<resources>
    <string name="app_name">TimerApp</string>
    <!--<string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>-->
    <string name="action_settings">Settings</string>
    <string name="edit_mode">Edit mode</string>
    <string name="link_mode">Link mode</string>
    <string name="resetTone">Reset alarm tone</string>
    <string name="resetTimers">Reset all timers</string>
    <string name="deleteTimers">Delete all timers</string>
    <string name="deleteButton">DELETE</string>
    <string name="saveButton">SAVE</string>
    <string name="edit">Edit</string>
    <string name="editTitle">Edit the title</string>
    <string name="saveTitle">SAVE TITLE</string>
    <string name="deleteAll">Delete all timers?</string>
    <string name="keepScreenOn">Disable display timeout</string>
</resources>
