<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_switch"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/edit_mode"
            app:actionLayout="@layout/action_view_switch" />
        <item
            android:id="@+id/nav_link_switch"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/link_mode"
            app:actionLayout="@layout/action_view_switch" />
    </group>

    <item android:title="Irreversible functions">
        <menu>
            <item
                android:id="@+id/nav_resetAlarm"
                android:icon="@android:drawable/ic_menu_revert"
                android:title="@string/resetTone" />
            <item
                android:id="@+id/nav_resetAll"
                android:icon="@android:drawable/ic_menu_revert"
                android:title="@string/resetTimers" />
            <item
                android:id="@+id/nav_deleteAll"
                android:icon="@android:drawable/ic_menu_delete"
                android:title="@string/deleteTimers" />
        </menu>
    </item>

</menu>
